ros2_ws/log/build_2021-01-18_21-22-49/tfpose_ros2/stderr.log
--2021-01-18 21:22:54--  http://download1412.mediafire.com/b3nsm5ut4dkg/qlzzr20mpocnpa3/graph_opt.pb
Resolving download1412.mediafire.com (download1412.mediafire.com)... 205.196.123.100
Connecting to download1412.mediafire.com (download1412.mediafire.com)|205.196.123.100|:80... connected.
HTTP request sent, awaiting response... 416 Range Not Satisfiable

    The file is already fully retrieved; nothing to do.

file pafprocess.py (for module pafprocess) not found
file pafprocess.py (for module pafprocess) not found
file pafprocess.py (for module pafprocess) not found
  File "/home/vlad/ros2_ws/install/tfpose_ros2/lib/python3.8/site-packages/tfpose_ros2/node_image_subscriber.py", line 54
    def point_cloud_listener_callback(self. msg)
                                          ^
SyntaxError: invalid syntax

file pafprocess.py (for module pafprocess) not found
